// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment deleted use-case Should delete message if it was found 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [
    "ABCDE",
  ],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [
    {
      "channelId": "12345",
      "reviewCommentId": 1,
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "1",
          "commentParentId": undefined,
          "resolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "replyBroadcast": undefined,
      "text": ":loudspeaker: Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|added comment>:",
      "threadId": undefined,
    },
  ],
  "topicUpdates": [],
}
`;

exports[`Comment deleted use-case Should send deletion notification if the initial message was not found 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [
    {
      "channelId": "12345",
      "reviewCommentId": -1,
    },
  ],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":broom: Test Reviewer 1 deleted comment:",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "text": {
            "text": "> Test comment",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "commentId": "-1",
          "commentParentId": undefined,
          "resolvedDate": undefined,
        },
        "eventType": "review_comment_snapshot_saved",
      },
      "text": ":broom: Test Reviewer 1 deleted comment:",
    },
  ],
  "topicUpdates": [],
}
`;
